2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/main.c (mbver):
	  Add a static variable saying the accompanying libmatchbox version
	  number that you can grep for in the binary.

2009-05-07  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-tile.c: Remove loading of font from gtkrc
	  and instead use hard-coded (slightly larger) value
	* src/home/hd-title-bar.c: Use "SystemFont" for both title bar and
	  home edit mode titles as per UI spec

2009-05-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-title-bar.c (hd_title_bar_set_window), src/mb/hd-decor.c:
	Do not do Pango ellipsation. Fixes: NB#106496
	(hd_title_bar_get_xy): Provide fallback values in case title bar is
	not in good condition.

2009-05-07  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#112411
	* src/mb/hd-comp-mgr.c: Added check for subview transition when the
	main view hasn't been mapped yet (and explanatory comment)

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#107676 Status menu should not turn in portrait mode

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Treat the status menu and power menu clients just like the others,
	  which in practice means admit to the fact that they don't support
	  portrait mode.

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/main.c:
	  Adding the '-d' command line switch to get a debug info dump
	  from an an already running window manager.

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c
	(hd_render_manager_place_titlebar_elements):
	  Make sure the status area actor is moved when it is supposed to.
	  Fixes the problem when the SA was crammed on the top of the tasks
	  button.

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Workaround for 'gadget held portrait, launch calculator case'.
	Workaround for 'have calculator on top and receive a call'.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):